# manip_utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
data/: hammer_js_traj.txt  hammer_traj.txt  spatula_traj.txt  test_traj.txt
launch/: cart_traj_from_file.launch  joint_traj_from_bag.launch  moveit_example.launch
src/: exec_traj_from_file.py  moveit_utils.py
